Add routes to get river by place name and search autocompletion