@@ -4,17 +4,28 @@
  * @author Justin Foltz <justin.foltz@gmail.com>
  */
 
-
 package com.waterloggedorganisation.backend;
 
 import com.google.common.collect.ImmutableMap;
+import com.waterloggedorganisation.backend.controller.RestService;
+import com.waterloggedorganisation.backend.model.Search;
+import com.waterloggedorganisation.backend.model.SearchType;
+
 import graphql.schema.DataFetcher;
+import graphql.schema.DataFetchingEnvironment;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+
+
 
 @Component
 public class GraphQLDataFetchers {
@@ -69,15 +80,20 @@ public class GraphQLDataFetchers {
 
     );
 
+    @Autowired
+    private RestService restService;
+
+
+
     // DataFetcher of the request riverById
     public DataFetcher getRiverByIdDataFetcher() {
         return dataFetchingEnvironment -> {
             String riverId = dataFetchingEnvironment.getArgument("id");
             return rivers
-                    .stream()
-                    .filter(river -> river.get("id").equals(riverId))
-                    .findFirst()
-                    .orElse(null);
+                .stream()
+                .filter(river -> river.get("id").equals(riverId))
+                .findFirst()
+                .orElse(null);
         };
     }
 
@@ -88,16 +104,61 @@ public class GraphQLDataFetchers {
             Double riverLongitude = dataFetchingEnvironment.getArgument("longitude");
 
             // Radius conversion : 78.567 is equal to 1 degree on earth coordinates
-            Double riverRadius = (Double)dataFetchingEnvironment.getArgument("radius") / new Double(78.567);
+            Double riverRadius = (Double)dataFetchingEnvironment.getArgument("radius") / Double.valueOf(78.567);
 
             return rivers
-                    .stream()
-                    .filter(river -> 
-                        Math.pow(Double.parseDouble(river.get("latitude")) - riverLatitude, 2) + 
-                        Math.pow(Double.parseDouble(river.get("longitude")) - riverLongitude, 2) <= riverRadius)
-                    .collect(Collectors.toList());
+                .stream()
+                .filter(river -> 
+                    Math.pow(Double.parseDouble(river.get("latitude")) - riverLatitude, 2) + 
+                    Math.pow(Double.parseDouble(river.get("longitude")) - riverLongitude, 2) <= riverRadius)
+                .collect(Collectors.toList());
 
         };
     }
+
+    public DataFetcher getRiverByLocationNameDataFetcher() {
+        return dataFetchingEnvironment -> {
+            String placeName = dataFetchingEnvironment.getArgument("placeName");
+            Optional<double[]> coordinates = restService.getCoordinatesFromPlace(placeName);
+
+            // Radius conversion : 78.567 is equal to 1 degree on earth coordinates
+            Double riverRadius = (Double)dataFetchingEnvironment.getArgument("radius") / Double.valueOf(78.567);
+
+            if(coordinates.isEmpty()) { return null; }
+
+            return rivers
+                .stream()
+                .filter(river -> 
+                    Math.pow(Double.parseDouble(river.get("latitude")) - coordinates.get()[0], 2) + 
+                    Math.pow(Double.parseDouble(river.get("longitude")) - coordinates.get()[1], 2) <= riverRadius)
+                .collect(Collectors.toList());
+
+        };
+    }
+
+
+    public DataFetcher searchFromPatternDataFetcher() {
+        return dataFetchingEnvironment -> {
+            String pattern = dataFetchingEnvironment.getArgument("pattern");
+            
+            Optional<List<Search>> placesResults = restService.getPlacesFromPattern(pattern);
+
+            Stream<Search> riverResults = rivers
+                .stream()
+                .filter(river -> river.get("name").contains(pattern))
+                .map(river -> new Search(river.get("name"), SearchType.RIVER));
+
+            if( placesResults.isPresent() ) {
+                return Stream.concat(riverResults, placesResults.get().stream())
+                    .collect(Collectors.toList());
+            }
+
+            return riverResults.collect(Collectors.toList());
+
+        };
+    }
+
+
+
 
 }
